--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.14",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "promise": "^8.3.0"
   },
   "description": ""
 }
