--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=Megan@2019
+DB_PASSWORD=
 DB_NAME=ynovo
 JWT_SECRET=G8kH6c9nFzTqZ7mP2bXxL3oR4aYvB1uJ6eQw8vPz
 PORT=3000
